	PR gas/6607 	* config/tc-mmix.c (s_loc): Assume "negative" addresses belong to 	text_section.  Do the "stepping backwards" test for text_section 	using unsigned operands.